fix: hide skeleton loaders and update login/signup button visibility for logged-in state

--- a/src/sass/_common/header.scss
+++ b/src/sass/_common/header.scss
@@ -188,8 +188,11 @@ body .header, .wallet__header {
         width: 1px;
         margin-left: 8px;
     }
-    .is-login, .is-logout {
+    .is-login {
         display: none;
+    }
+    .is-logout {
+        display: inline-flex; // Show initially to display skeleton loaders
     }
     &__btn {
         display: flex;
